--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>crap portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <div class="main"></div>
+    <footer></footer>
+  </body>
 </html>
